# medium-blog-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  build_index.py  chat_server.py  mcp_config.json  parser.py  pyproject.toml  requirements.txt  scraper.py  server.py
data/: README.html  ips.html
data/blocks/: blocked-users-0001.html
data/bookmarks/: bookmarks-0001.html
data/claps/: claps-0001.html
data/highlights/: highlights-0001.html
data/interests/: publications.html  tags.html  topics.html  writers.html
data/lists/: Reading-list-predefined:ae3db8cd300a:READING_LIST.html
data/posts/: 2018-03-22_Ucap-orang-tentang-fitrah-itu-5701b1dbeee5.html  2018-03-25_Kisah-sebuah-negeri-di-akhir-zaman-98754f21c290.html  2018-04-10_Kenali-apa-mau-gelarmu--bray-67a42b185e99.html  2018-04-24_Cemburu-4783cbc1f544.html  2018-05-01_Kaum-Sophis-dan-Socrates-15cc7e6a8038.html  2018-10-21_Sejauh-manapun-kau-pergi--kita-akan-tetap-berakhir-satu-8362cc79e3d7.html  2019-01-11_Gadis-Desa--Sajak--977421ef8113.html  2019-01-13_Pesan-kakak-tingkat-kepada-adek-maba-5de0a6a45cf2.html  2019-01-15_Saya-ini-lho-insan-yang-tersadarkan-c5c722778a4f.html  2019-01-21_Sepi-6fbd069bb1e1.html  2019-03-06_Romantisme-Sebatang-Sabun-8b98333ef0f.html  2019-05-28_Resensi-Filsafat-Ilmu-Prof--Dr--Ahmad-Tafsir-6daa008214a5.html  2019-07-07_Meski-memakan-waktu-3-tahun--hanya-butuh-3-detik-untuk-mencintaimu-6199b1cc374a.html  2019-07-13_Kita-masih-pagi--belum-lagi-siang--jangan-menuntut-senja-15e9229d90c.html  2019-09-10_Aku-menikmati-mencintaimu-a0479d663679.html  (+86 more)
static/: index.html
(+8 files in other folders)
