[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lori-medium-blog"
version = "1.0.0"
description = "MCP server for semantic search across Lori's blog"
authors = [{ name = "Lori" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]
